[package]
name = "humanlog"
version = "0.2.0"
edition = "2021"
authors = [ "Lut99" ]
description = "A simple implementation for the [log](https://https//docs.rs/log/latest/log/) crate that aims to have a pretty, user-friendly mode, and a comprehensive, dev-friendly _debug_ mode."
license = "Apache-2.0"

[dependencies]
chrono      = "0.4.23"
console     = "0.15.5"
log         = { version = "0.4.17", features = ["std"] }
parking_lot = "0.12.1"

[dev-dependencies]
clap = { version = "4.1", features = ["derive"] }
